--- a/src/main/resources/templates/reports/circulationlog.html
+++ b/src/main/resources/templates/reports/circulationlog.html
@@ -28,7 +28,8 @@
 						<ul>
 							<li>Displays circulation loan records with relevant to the
 								library items.Please select the relevant location from the drop
-								downs and select from and to date (last loan date duration) to proceed.</li>
+								downs and select from and to date (last loan date duration) to
+								proceed.</li>
 						</ul>
 					</div>
 
@@ -48,8 +49,8 @@
 						<div class="cols-sm-10">
 							<div class="input-group">
 
-								<select onchange="selectInstitution()" class="form-control"
-									id="institutionDropDown" th:name="institutionDropDown">
+								<select onchange="selectInstitution(this)" class="form-control"
+									id="institutionDropDown4" name="institutionDropDown">
 									<option th:value="0">Select Institution</option>
 
 									<option th:each="institution : ${institutionList}"
@@ -76,8 +77,8 @@
 						<div class="cols-sm-10">
 							<div class="input-group">
 
-								<select onchange="selectCampus()" class="form-control"
-									id="campusDropDown">
+								<select onchange="selectCampus(this)" class="form-control"
+									id="campusDropDown4" name="campusDropDown">
 									<option th:value="0">Select Campus</option>
 
 									<option th:each="campus : ${campusList}"
@@ -102,8 +103,8 @@
 						<div class="cols-sm-10">
 							<div class="input-group">
 
-								<select onchange="selectLibrary()" class="form-control"
-									id="libraryDropDown" th:name="libraryDropDown">
+								<select onchange="selectLibrary(this)" class="form-control"
+									id="libraryDropDown4" name="libraryDropDown">
 									<option th:value="0">Select Library</option>
 
 									<option th:each="library : ${libraryList}"
@@ -130,8 +131,8 @@
 						<div class="cols-sm-10">
 							<div class="input-group">
 
-								<select class="form-control" id="locationDropDown"
-									th:name="locationDropDown">
+								<select class="form-control" id="locationDropDown4"
+									name="locationDropDown">
 									<option th:value="0">Select Location</option>
 
 									<option th:each="location : ${locationList}"
@@ -153,7 +154,7 @@
 		<div class="row top-buffer"></div>
 		<div class="row container-border">
 
-			<div class="col-xs-3 form-inline" >
+			<div class="col-xs-3 form-inline">
 
 				<div class="form-group">
 					<div class="form-group">
@@ -327,9 +328,10 @@
 	$("#load-dt").click(
 			function() {
 
-				if (institutionDropDown.value == 0 && campusDropDown.value == 0
-						&& libraryDropDown.value == 0
-						&& locationDropDown.value == 0) {
+				if (institutionDropDown4.value == 0
+						&& campusDropDown4.value == 0
+						&& libraryDropDown4.value == 0
+						&& locationDropDown4.value == 0) {
 					alert("Please select a value from at least one dropdown.");
 				} else if ($('#start_date').val() == ''
 						|| $('#end_date').val() == '') {
