--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -149,6 +149,24 @@
 
 					</ul>
 
+					<!-- <ul class="nav navbar-nav">
+						Hidden li included to remove active class from about link when scrolled up past about section
+						<li class="hidden"><a class="page-scroll" href="#page-top"></a>
+						</li>
+
+						<li th:if="${user != null  &&  user.authorized.contains(2)}"
+							class="dropdown"><a href="#" class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false"> ARL Reports<span class="caret"></span>
+						</a>
+							<ul class="dropdown-menu">
+								<li><a th:href="@{/arl-reports/microfilm}">ARL Question
+										1E Microfilm</a></li>
+
+							</ul></li>
+
+					</ul> -->
+
 					<ul th:if="${user != null}" class="nav navbar-nav navbar-right">
 						<li class="dropdown"><a href="#" class="dropdown-toggle"
 							data-toggle="dropdown" role="button" aria-haspopup="true"
