Added Author details.

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -15,8 +15,8 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="description" content="" />
-<meta name="author" content="" />
+<meta name="description" content="RedBud">
+<meta name="author" content="Damith Perera,Nikhil Motwani">
 
 <title>Redbud - Oklahoma State University Library</title>
 <!-- Bootstrap Core CSS -->
@@ -138,8 +138,7 @@
 
 								<li><a th:href="@{/reports/circulationlog}">Circulation
 										Log </a></li>
-								<li><a th:href="@{/reports/circulationloan}">Circulation
-										Loans </a></li>
+								<li><a th:href="@{/reports/openloans}">Open Loans </a></li>
 								<li><a th:href="@{/reports/institutionRecords}">Institution
 										Records </a></li>
 
